# bevy_2d_screen_space_lightmaps

./: Cargo.toml  LICENSE.txt  readme.md
assets/lightmap_shader/: blend_mult_textures.wgsl
src/: main.rs
src/examples/: moving_truck.rs
src/lightmap_plugin/: lightmap_plugin.rs  mod.rs
